--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Merl 2015©u¤¤¿ï¨q·|</a>
+            <a class="navbar-brand" href="#">Merl 2015©u¤¤¿ï¨q·| ¼ÒÀÀ¿ï¨q</a>
          </div>
          <!-- /.navbar-collapse -->
       </div>
@@ -48,128 +48,128 @@
                      </tr>
                      <tr>
                         <th>1</th>
-                        <td>½±´¼½å</td>
-                        <td>ªL­õÞ±</td>
-                        <td>¤ý¬f¿Ä</td>
-                        <td>­ÙºÖ¼w</td>
+                        <td team=rhino round=1>½±´¼½å</td>
+                        <td team=lion round=1>ªL­õÞ±</td>
+                        <td team=elephant round=1>¤ý¬f¿Ä</td>
+                        <td team=monkey round=1>­ÙºÖ¼w</td>
                      </tr>
                      <tr>
                         <th>2</th>
-                        <td>§º®a»¨</td>
-                        <td>ªL¤l´Q</td>
-                        <td>ªL©Ó­¸</td>
-                        <td>ªL¬F½å</td>
+                        <td team=rhino round=2>§º®a»¨</td>
+                        <td team=lion round=1>ªL¤l´Q</td>
+                        <td team=elephant round=1>ªL©Ó­¸</td>
+                        <td team=monkey round=1>ªL¬F½å</td>
                      </tr>
                      <tr>
                         <th>3</th>
-                        <td>¼ï§ÓªÚ</td>
-                        <td>³¢ªúªL</td>
-                        <td>ªL§Ó½å</td>
-                        <td>´^ÃÑ¿o</td>
+                        <td team=rhino round=3>¼ï§ÓªÚ</td>
+                        <td team=lion round=3>³¢ªúªL</td>
+                        <td team=elephant round=3>ªL§Ó½å</td>
+                        <td team=monkey round=3>´^ÃÑ¿o</td>
                      </tr>
                      <tr>
                         <th>4</th>
-                        <td>¼B°aÓ¯</td>
-                        <td>Ã¹µØ­³</td>
-                        <td>Ã¹°êÅï</td>
-                        <td>¾GñZ¤å</td>
+                        <td team=rhino round=4>¼B°aÓ¯</td>
+                        <td team=lion round=4>Ã¹µØ­³</td>
+                        <td team=elephant round=4>Ã¹°êÅï</td>
+                        <td team=monkey round=4>¾GñZ¤å</td>
                      </tr>
                      <tr>
                         <th>5</th>
-                        <td>¸­¤å²N</td>
-                        <td>ªL©úªN</td>
-                        <td>¶À¥ç§Ó</td>
-                        <td>³¯±Ó½ç</td>
+                        <td team=rhino round=5>¸­¤å²N</td>
+                        <td team=lion round=5>ªL©úªN</td>
+                        <td team=elephant round=5>¶À¥ç§Ó</td>
+                        <td team=monkey round=5>³¯±Ó½ç</td>
                      </tr>
                      <tr>
                         <th>6</th>
-                        <td>³¢«í§µ</td>
-                        <td>¤ýÅDÀM</td>
-                        <td>½²«³¥È</td>
-                        <td>¶§Ä£¾±</td>
+                        <td team=rhino round=6>³¢«í§µ</td>
+                        <td team=lion round=6>¤ýÅDÀM</td>
+                        <td team=elephant round=6>½²«³¥È</td>
+                        <td team=monkey round=6>¶§Ä£¾±</td>
                      </tr>
                      <tr>
                         <th>7</th>
-                        <td>³¯ªl¥ç</td>
-                        <td>Ä¬½n¹F</td>
-                        <td>¶À©vÀs</td>
-                        <td>´å©v¾§</td>
+                        <td team=rhino round=7>³¯ªl¥ç</td>
+                        <td team=lion round=7>Ä¬½n¹F</td>
+                        <td team=elephant round=7>¶À©vÀs</td>
+                        <td team=monkey round=7>´å©v¾§</td>
                      </tr>
                      <tr>
                         <th>8</th>
-                        <td>ÂÅ¤Ö¦w</td>
-                        <td>¤_©s¶¯</td>
-                        <td>¤ý«T¦Ð</td>
-                        <td>±iªµµ¾</td>
+                        <td team=rhino round=8>ÂÅ¤Ö¦w</td>
+                        <td team=lion round=8>¤_©s¶¯</td>
+                        <td team=elephant round=8>¤ý«T¦Ð</td>
+                        <td team=monkey round=8>±iªµµ¾</td>
                      </tr>
                      <tr>
                         <th>9</th>
-                        <td>³¢¤OÞ³</td>
-                        <td>±iñZÅÉ</td>
-                        <td>¤ý«Â±á</td>
-                        <td>¦¿«G½n</td>
+                        <td team=rhino round=9>³¢¤OÞ³</td>
+                        <td team=lion round=9>±iñZÅÉ</td>
+                        <td team=elephant round=9>¤ý«Â±á</td>
+                        <td team=monkey round=9>¦¿«G½n</td>
                      </tr>
                      <tr>
                         <th>10</th>
-                        <td>ªL¤¦²±</td>
-                        <td>²øÂ@³Í</td>
-                        <td>±i³Í­Û</td>
-                        <td>§õ©sêM</td>
+                        <td team=rhino round=10>ªL¤¦²±</td>
+                        <td team=lion round=10>²øÂ@³Í</td>
+                        <td team=elephant round=10>±i³Í­Û</td>
+                        <td team=monkey round=10>§õ©sêM</td>
                      </tr>
                      <tr>
                         <th>11</th>
-                        <td>ªL«Â§Ê</td>
+                        <td team=rhino round=11>ªL«Â§Ê</td>
                         <td>©ñ±ó</td>
-                        <td>¼ï®xÂ×</td>
-                        <td>©ñ±ó</td>
+                        <td team=elephant round=11>¼ï®xÂ×</td>
+                        <td team=monkey round=11>©ñ±ó</td>
                      </tr>
                      <tr>
                         <th>12</th>
-                        <td>ªL¹©µq</td>
+                        <td team=rhino round=12>ªL¹©µq</td>
                         <td></td>
-                        <td>ªL«·¦t</td>
+                        <td team=elephant round=12>ªL«·¦t</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>13</th>
-                        <td>¹ùÝÏ¾§</td>
+                        <td team=rhino round=13>¹ùÝÏ¾§</td>
                         <td></td>
-                        <td>´¿³³Âè</td>
+                        <td team=elephant round=13>´¿³³Âè</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>14</th>
-                        <td>©P½U</td>
+                        <td team=rhino round=14>©P½U</td>
                         <td></td>
-                        <td>³¯¬ù·æ</td>
+                        <td team=elephant round=14>³¯¬ù·æ</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>15</th>
                         <td>©ñ±ó</td>
                         <td></td>
-                        <td>Ä¬«Ø»Ê</td>
+                        <td team=elephant round=15>Ä¬«Ø»Ê</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>16</th>
                         <td></td>
                         <td></td>
-                        <td>§õ¨å®x</td>
+                        <td team=elephant round=16>§õ¨å®x</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>17</th>
                         <td></td>
                         <td></td>
-                        <td>¹ù¥»³³</td>
+                        <td team=elephant round=17>¹ù¥»³³</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>18</th>
                         <td></td>
                         <td></td>
-                        <td>¥Ì¤Ö±d</td>
+                        <td team=elephant round=18>¥Ì¤Ö±d</td>
                         <td></td>
                      </tr>
                      <tr>
