--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 
 <html lang="zh-Hant">
 <head>
-   <title>Merl ¼ÒÀÀ¿ï¨q</title>
+   <title>Merl æ¨¡æ“¬é¸ç§€</title>
    <!-- Viewport mobile tag for sensible mobile support -->
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+   <meta charset="UTF-8"> 
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/ripples.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.3.0/css/material-fullpalette.css">
    <!--STYLES-->
-   <link rel="stylesheet" href="/static/style.css">
-   <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+   <link rel="stylesheet" href="static/style.css">
+   <link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
    <!--STYLES END-->
 </head>
 <body>
@@ -24,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Merl 2015©u¤¤¿ï¨q·| ¼ÒÀÀ¿ï¨q</a>
+            <a class="navbar-brand" href="#">Merl 2015å­£ä¸­é¸ç§€æœƒ æ¨¡æ“¬é¸ç§€</a>
          </div>
          <!-- /.navbar-collapse -->
       </div>
@@ -35,148 +36,148 @@
          <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-material-light-blue-400">
                <div class="panel-heading">
-                  <h3 class="panel-title">¿ï¨qµ²ªG</h3>
+                  <h3 class="panel-title">æ¨¡æ“¬é¸ç§€çµæžœ</h3>
                </div>
                <table class="table table-bordered" id="result">
                   <tbody>
                      <tr>
                         <th></th>
-                        <th>¸q¤j</th>
-                        <th>²Î¤@</th>
-                        <th>¤¤«H</th>
-                        <th>®ç·á</th>
+                        <th>ç¾©å¤§</th>
+                        <th>çµ±ä¸€</th>
+                        <th>ä¸­ä¿¡</th>
+                        <th>æ¡ƒçŒ¿</th>
                      </tr>
                      <tr>
                         <th>1</th>
-                        <td team=rhino round=1>½±´¼½å</td>
-                        <td team=lion round=1>ªL­õÞ±</td>
-                        <td team=elephant round=1>¤ý¬f¿Ä</td>
-                        <td team=monkey round=1>­ÙºÖ¼w</td>
+                        <td team=rhino round=1>è”£æ™ºè³¢</td>
+                        <td team=lion round=1>æž—å“²ç‘„</td>
+                        <td team=elephant round=1>çŽ‹æŸèž</td>
+                        <td team=monkey round=1>å€ªç¦å¾·</td>
                      </tr>
                      <tr>
                         <th>2</th>
-                        <td team=rhino round=2>§º®a»¨</td>
-                        <td team=lion round=1>ªL¤l´Q</td>
-                        <td team=elephant round=1>ªL©Ó­¸</td>
-                        <td team=monkey round=1>ªL¬F½å</td>
+                        <td team=rhino round=2>å®‹å®¶è±ª</td>
+                        <td team=lion round=1>æž—å­å´´</td>
+                        <td team=elephant round=1>æž—æ‰¿é£›</td>
+                        <td team=monkey round=1>æž—æ”¿è³¢</td>
                      </tr>
                      <tr>
                         <th>3</th>
-                        <td team=rhino round=3>¼ï§ÓªÚ</td>
-                        <td team=lion round=3>³¢ªúªL</td>
-                        <td team=elephant round=3>ªL§Ó½å</td>
-                        <td team=monkey round=3>´^ÃÑ¿o</td>
+                        <td team=rhino round=3>æ½˜å¿—èŠ³</td>
+                        <td team=lion round=3>éƒ­é˜œæž—</td>
+                        <td team=elephant round=3>æž—å¿—è³¢</td>
+                        <td team=monkey round=3>å½­è­˜ç©Ž</td>
                      </tr>
                      <tr>
                         <th>4</th>
-                        <td team=rhino round=4>¼B°aÓ¯</td>
-                        <td team=lion round=4>Ã¹µØ­³</td>
-                        <td team=elephant round=4>Ã¹°êÅï</td>
-                        <td team=monkey round=4>¾GñZ¤å</td>
+                        <td team=rhino round=4>åŠ‰è»’è…</td>
+                        <td team=lion round=4>ç¾…è¯éŸ‹</td>
+                        <td team=elephant round=4>ç¾…åœ‹éºŸ</td>
+                        <td team=monkey round=4>é„­éŽ§æ–‡</td>
                      </tr>
                      <tr>
                         <th>5</th>
-                        <td team=rhino round=5>¸­¤å²N</td>
-                        <td team=lion round=5>ªL©úªN</td>
-                        <td team=elephant round=5>¶À¥ç§Ó</td>
-                        <td team=monkey round=5>³¯±Ó½ç</td>
+                        <td team=rhino round=5>è‘‰æ–‡æ·‡</td>
+                        <td team=lion round=5>æž—æ˜Žæ°</td>
+                        <td team=elephant round=5>é»ƒäº¦å¿—</td>
+                        <td team=monkey round=5>é™³æ•è³œ</td>
                      </tr>
                      <tr>
                         <th>6</th>
-                        <td team=rhino round=6>³¢«í§µ</td>
-                        <td team=lion round=6>¤ýÅDÀM</td>
-                        <td team=elephant round=6>½²«³¥È</td>
-                        <td team=monkey round=6>¶§Ä£¾±</td>
+                        <td team=rhino round=6>éƒ­æ†å­</td>
+                        <td team=lion round=6>çŽ‹èºéœ–</td>
+                        <td team=elephant round=6>è”¡å¥•çŽ„</td>
+                        <td team=monkey round=6>é™½è€€å‹³</td>
                      </tr>
                      <tr>
                         <th>7</th>
-                        <td team=rhino round=7>³¯ªl¥ç</td>
-                        <td team=lion round=7>Ä¬½n¹F</td>
-                        <td team=elephant round=7>¶À©vÀs</td>
-                        <td team=monkey round=7>´å©v¾§</td>
+                        <td team=rhino round=7>é™³æ³“äº¦</td>
+                        <td team=lion round=7>è˜‡ç·¯é”</td>
+                        <td team=elephant round=7>é»ƒå®—é¾</td>
+                        <td team=monkey round=7>æ¸¸å®—å„’</td>
                      </tr>
                      <tr>
                         <th>8</th>
-                        <td team=rhino round=8>ÂÅ¤Ö¦w</td>
-                        <td team=lion round=8>¤_©s¶¯</td>
-                        <td team=elephant round=8>¤ý«T¦Ð</td>
-                        <td team=monkey round=8>±iªµµ¾</td>
+                        <td team=rhino round=8>è—å°‘å®‰</td>
+                        <td team=lion round=8>äºŽå­Ÿé›„</td>
+                        <td team=elephant round=8>çŽ‹ä¿Šç¾½</td>
+                        <td team=monkey round=8>å¼µçŽ¥ç¿”</td>
                      </tr>
                      <tr>
                         <th>9</th>
-                        <td team=rhino round=9>³¢¤OÞ³</td>
-                        <td team=lion round=9>±iñZÅÉ</td>
-                        <td team=elephant round=9>¤ý«Â±á</td>
-                        <td team=monkey round=9>¦¿«G½n</td>
+                        <td team=rhino round=9>éƒ­åŠ›ç‘‹</td>
+                        <td team=lion round=9>å¼µéŽ§å·–</td>
+                        <td team=elephant round=9>çŽ‹å¨æ™¨</td>
+                        <td team=monkey round=9>æ±Ÿäº®ç·¯</td>
                      </tr>
                      <tr>
                         <th>10</th>
-                        <td team=rhino round=10>ªL¤¦²±</td>
-                        <td team=lion round=10>²øÂ@³Í</td>
-                        <td team=elephant round=10>±i³Í­Û</td>
-                        <td team=monkey round=10>§õ©sêM</td>
+                        <td team=rhino round=10>æž—ä¸¹ç››</td>
+                        <td team=lion round=10>èŽŠé§¿å‡±</td>
+                        <td team=elephant round=10>å¼µå‡±å€«</td>
+                        <td team=monkey round=10>æŽå­Ÿç‡</td>
                      </tr>
                      <tr>
                         <th>11</th>
-                        <td team=rhino round=11>ªL«Â§Ê</td>
-                        <td>©ñ±ó</td>
-                        <td team=elephant round=11>¼ï®xÂ×</td>
-                        <td team=monkey round=11>©ñ±ó</td>
+                        <td team=rhino round=11>æž—å¨å»·</td>
+                        <td>æ”¾æ£„</td>
+                        <td team=elephant round=11>æ½˜åº­è±</td>
+                        <td team=monkey round=11>æ”¾æ£„</td>
                      </tr>
                      <tr>
                         <th>12</th>
-                        <td team=rhino round=12>ªL¹©µq</td>
+                        <td team=rhino round=12>æž—é¼Žçš“</td>
                         <td></td>
-                        <td team=elephant round=12>ªL«·¦t</td>
+                        <td team=elephant round=12>æž—å¥å®‡</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>13</th>
-                        <td team=rhino round=13>¹ùÝÏ¾§</td>
+                        <td team=rhino round=13>å»–æ¤¿å„’</td>
                         <td></td>
-                        <td team=elephant round=13>´¿³³Âè</td>
+                        <td team=elephant round=13>æ›¾é™¶éŽ”</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>14</th>
-                        <td team=rhino round=14>©P½U</td>
+                        <td team=rhino round=14>å‘¨ç£Š</td>
                         <td></td>
-                        <td team=elephant round=14>³¯¬ù·æ</td>
+                        <td team=elephant round=14>é™³ç´„ç‘Ÿ</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>15</th>
-                        <td>©ñ±ó</td>
+                        <td>æ”¾æ£„</td>
                         <td></td>
-                        <td team=elephant round=15>Ä¬«Ø»Ê</td>
+                        <td team=elephant round=15>è˜‡å»ºéŠ˜</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>16</th>
                         <td></td>
                         <td></td>
-                        <td team=elephant round=16>§õ¨å®x</td>
+                        <td team=elephant round=16>æŽå…¸åº­</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>17</th>
                         <td></td>
                         <td></td>
-                        <td team=elephant round=17>¹ù¥»³³</td>
+                        <td team=elephant round=17>å»–æœ¬é™¶</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>18</th>
                         <td></td>
                         <td></td>
-                        <td team=elephant round=18>¥Ì¤Ö±d</td>
+                        <td team=elephant round=18>ç”˜å°‘åº·</td>
                         <td></td>
                      </tr>
                      <tr>
                         <th>19</th>
                         <td></td>
                         <td></td>
-                        <td>©ñ±ó</td>
+                        <td>æ”¾æ£„</td>
                         <td></td>
                      </tr>
                   </tbody>
