--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <td team=rhino round=8>藍少安</td>
                         <td team=lion round=8>于孟雄</td>
                         <td team=elephant round=8>王俊羽</td>
-                        <td team=monkey round=8>張玥翔</td>
+                        <td team=monkey round=8>張明翔</td>
                      </tr>
                      <tr>
                         <th>9</th>
